Converted video in Trash Panda project to YouTube format.

--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
                         enemies (construction workers) as well as a handful of UI elements with C# 
                         scripts.
                     </p>
-                    <video src="./resources/images/Trailer2019f.mp4" controls>
-                        Video not available.
-                    </video>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/HAoO-DeWzHY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="headline" id="headline-portfolio">
                     <img src="./resources/images/arrowhead-right.png" id="arrow-right-portfolio">
