Added functionality to header links.

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <a href="index.html" class="desktop logo">Gabriel Chan</a>
         <nav>
             <ul>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contacts">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <!--About Section-->
-        <div class="about">
+        <div class="about" id="about">
             <div class="text-container">
                 <h2>About Me</h2>
                 <p>Welcome to my Portfolio Website. My name is Gabriel Chan. I am an 
@@ -52,7 +52,7 @@
             </div>
         </div>
         <!--Projects Section-->
-        <div class="projects">
+        <div class="projects" id="projects">
             <div class="text-container">
                 <h2>Projects</h2>
                 <div class="headline" id="headline-linux">
@@ -130,7 +130,7 @@
             </div>
         </div>
         <!--Skills Section-->
-        <div class="skills">
+        <div class="skills" id="skills">
             <div class="text-container">
                 <h2>Skills</h2>
                 <h3>Intermediate:</h3>
@@ -228,7 +228,7 @@
             </div>
         </div>
         <!--Contacts Section-->
-        <div class="contacts">
+        <div class="contacts" id="contacts">
             <div class="text-container">
                 <h2>Contact</h2>
                 <div class="contact-method">
