Added Jammming web application to Projects section and React to Skills section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,32 @@
         <div class="projects" id="projects">
             <div class="text-container">
                 <h2>Projects</h2>
+                <div class="headline" id="headline-jammming">
+                    <img src="./resources/images/arrowhead-right.png" id="arrow-right-jammming">
+                    <img src="./resources/images/arrowhead-down.png" id="arrow-down-jammming" style="display: none;">
+                    <h3>Jammming Web Application</h3>
+                </div>
+                <div class="project-content" id="jammming-web-application">
+                    <h4 style="margin-bottom: 2.5rem;">
+                        <a href="https://github.com/GabrielChan1/Jammming">
+                            Source Code
+                        </a>
+                    </h4>
+                    <h4 style="margin-top: 2.5rem;">
+                        <a href="https://gabrielchan1.github.io/Jammming/">
+                            To Application
+                        </a>
+                    </h4>
+                    <p>
+                        The Jammming web application allows the user to search for Spotify tracks and 
+                        create and export playlists to the user's Spotify account. By integrating the
+                        Spotify API, Jammming is able to perform these functions by sending GET and
+                        POST requests. Core technologies used in this application include Javascript,
+                        React and, of course, the Spotify API. Please note that a Spotify account is
+                        required to use Jammming.
+                    </p>
+                    <img src="./resources/images/jammming-screenshot.png" alt="jammming screenshot">
+                </div>
                 <div class="headline" id="headline-linux">
                     <img src="./resources/images/arrowhead-right.png" id="arrow-right-linux">
                     <img src="./resources/images/arrowhead-down.png" id="arrow-down-linux" style="display: none;">
@@ -182,6 +208,12 @@
                     <img src="./resources/images/agile-logo.png">
                     <div class="logo-overlay" id="agile-overlay">
                         <h3>Agile</h3>
+                    </div>
+                </div>
+                <div class="logo-container" id="react-logo">
+                    <img src="./resources/images/react-logo.png">
+                    <div class="logo-overlay" id="react-overlay">
+                        <h3>React</h3>
                     </div>
                 </div>
             </div>
