Added Jammming web application to Projects section and added some background images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!--Header-->
-    <header>
+    <header id="header">
         <a href="index.html" class="desktop logo">Gabriel Chan</a>
         <nav>
             <ul>
@@ -23,7 +23,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="main">
         <!--About Section-->
         <div class="about" id="about">
             <div class="text-container">
@@ -44,8 +44,7 @@
                     tools, Jarvis also taught me about many effective programming practices such 
                     as the Scrum framework, Test-Driven Development as well as Continuous 
                     Integration. Currently, I am persuing a professional certification in 
-                    Full-Stack Engineering and Design at Codecademy while also learning about 
-                    HTML, CSS and Javascript.</p>
+                    Full-Stack Engineering and Design at Codecademy.</p>
             </div>
             <div class="image-container">
                 <img src="./resources/images/IMG_1397.JPG" alt="A photo of me">
@@ -291,10 +290,18 @@
                 </h3>
             </div>
         </div>
+        <p>
+            Background image attributions: 
+            <a href="https://www.freepik.com/free-vector/network-mesh-wire-digital-technology-background_10136775.htm#query=website%20background&position=0&from_view=keyword&track=ais">Main</a>
+            <a href="https://www.freepik.com/free-vector/abstract-classic-blue-screensaver_6674908.htm#query=website%20background&position=49&from_view=keyword&track=ais">About</a>
+            <a href="https://www.freepik.com/free-photo/abstract-futuristic-background-with-3d-design_19314510.htm#query=website%20background&position=30&from_view=keyword&track=ais">Projects</a>
+            <a href="https://www.freepik.com/free-vector/abstract-realistic-technology-particle-background_6764484.htm#query=website%20background&position=47&from_view=keyword&track=ais#position=47&query=website%20background">Skills</a>
+            <a href="https://www.freepik.com/free-vector/gradient-dynamic-blue-lines-background_15151445.htm#query=website%20background&position=10&from_view=keyword&track=ais">Contact</a>
+        </p>
     </main>
     <!--Footer-->
     <footer>
-
+        
     </footer>
     <script src="./resources/js/main.js"></script>
 </body>
