Updated URL of Jammming web application

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </a>
                     </h4>
                     <h4 style="margin-top: 2.5rem;">
-                        <a href="https://gabrielchan1.github.io/Jammming/">
+                        <a href="https://superlative-medovik-410381.netlify.app/">
                             To Application
                         </a>
                     </h4>
