Modified introduction and contact block contents

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                     in an effective and efficient manner. While I learned about how to use these 
                     tools, Jarvis also taught me about many effective programming practices such 
                     as the Scrum framework, Test-Driven Development as well as Continuous 
-                    Integration. Currently, I am persuing a professional certification in 
-                    Full-Stack Engineering and Design at Codecademy.</p>
+                    Integration. </p>
             </div>
             <div class="image-container">
                 <img src="./resources/images/IMG_1397.JPG" alt="A photo of me">
@@ -282,12 +281,6 @@
                         <em>github.com/GabrielChan1</em>
                     </a></p>
                 </div>
-                <h3>
-                    Please only use my phone number to text and send SMS messages. Do not call me out of
-                    the blue. If you must call me, please send me advance notice through another method 
-                    first. Any phone calls I receive from unrecognized numbers without prior notice will 
-                    be treated as spam.
-                </h3>
             </div>
         </div>
         <p>
