Added Node.js and AWS logos to skills section

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <div class="logo-container" id="react-logo">
                     <img src="./resources/images/react-logo.png">
                     <div class="logo-overlay" id="react-overlay">
-                        <h3>React</h3>
+                        <h3>React.js</h3>
                     </div>
                 </div>
             </div>
@@ -253,6 +253,18 @@
                     <img src="./resources/images/unity-logo.png">
                     <div class="logo-overlay" id="unity-overlay">
                         <h3>Unity</h3>
+                    </div>
+                </div>
+                <div class="logo-container" id="node-logo">
+                    <img src="./resources/images/node-logo.png">
+                    <div class="logo-overlay" id="node-overlay">
+                        <h3>Node.js</h3>
+                    </div>
+                </div>
+                <div class="logo-container" id="aws-logo">
+                    <img src="./resources/images/aws-logo.png">
+                    <div class="logo-overlay" id="aws-overlay">
+                        <h3>AWS</h3>
                     </div>
                 </div>
             </div>
