Added Azure logo and modified CSS flex elements

--- a/index.html
+++ b/index.html
@@ -264,7 +264,13 @@
                 <div class="logo-container" id="aws-logo">
                     <img src="./resources/images/aws-logo.png">
                     <div class="logo-overlay" id="aws-overlay">
-                        <h3>AWS</h3>
+                        <h3>Amazon Web Services</h3>
+                    </div>
+                </div>
+                <div class="logo-container" id="azure-logo">
+                    <img src="./resources/images/azure-logo.png">
+                    <div class="logo-overlay" id="azure-overlay">
+                        <h3>Azure</h3>
                     </div>
                 </div>
             </div>
